--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-select": "^3.12.2",
     "vue-step-progress": "^0.3.6",
     "vuelidate": "^0.7.6",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack": "^4.8.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -46,8 +47,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.0.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
